# Chat01

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
client/include/: ClientNetworkManager.h
client/src/: ChatClient.cpp  ClientNetworkManager.cpp
common/include/: Message.h  NetworkProtocol.h  PlatformNetwork.h  User.h
common/src/: Message.cpp  PlatformNetwork.cpp  User.cpp
gui/: Chat01GUI.pro
gui/forms/: loginwindow.ui  mainwindow.ui
gui/include/: chatclient.h  loginwindow.h  mainwindow.h
gui/resources/styles/: default.qss
gui/src/: chatclient.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp
server/include/: AccountManager.h  ChatServer.h  ServerNetworkManager.h
server/src/: AccountManager.cpp  ChatServer.cpp  ServerNetworkManager.cpp  main.cpp
